# pybind11-examples

./: .gitignore  LICENCE.md  README.md  pyproject.toml  setup.py
pybind11_examples/: __init__.py  __init__.pyi
src/: animal.h  classmethod.cpp  collatz.h  constants.h  decorators.cpp  decorators.h  enums.h  fibonacci.cpp  fibonacci.h  managed_resource.h  module.cpp  primes.cpp  primes.h  print.h  registry.cpp  registry.h  shape.h  timer.h  vectorised.h
test/: test_animal.py  test_collatz.py  test_constants.py  test_context_manager.py  test_decorator.py  test_enum.py  test_fibonacci.py  test_init_subclass.py  test_primes.py  test_shape.py  test_vectorised.py
