[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.10.0",
    "numpy",
    "pytest"
]

build-backend = "setuptools.build_meta"

[project]
name = "pybind11-examples"
version = "0.0.1"
authors = [
  { name="Andrew Smith", email="andrew@friarswood.net" },
]
license = {file = "LICENCE.md"}
description = "Examples of "
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]


[project.optional-dependencies]
dev = [
  "pybind11>=2.10.3",
  "pytest>=7.1.3",
  "mypy>=1.5.0",
  "mypy-extensions>=1.0.0",
  "ruff",
]


[project.urls]
"Homepage" = "https://github.com/virgesmith/pybind11-examples"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test"
]

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]